# dotfiles

./: .gitignore  .stow-local-ignore
Vorlagen/: .gitignore  .gitignore_LaTeX  CMakeLists.txt
Vorlagen/LaTeX/: .gitignore_LaTeX  Projektstruktur
Vorlagen/cmake/: CMakeLists.txt  ordnerstruktur
Vorlagen/scripts/: create_c_project.sh
alfred-sync/Alfred.alfredpreferences/themes/theme.fileimport.443EC6D3-5108-4AF0-87C8-880CE064DC20/: theme.json
alfred-sync/Alfred.alfredpreferences/themes/theme.fileimport.4C5DFE01-69F3-45E5-81C8-FAEFDCC0C770/: theme.json
alfred-sync/Alfred.alfredpreferences/themes/theme.fileimport.9C140388-C489-43EC-BC82-E62BD57029A2/: theme.json
alfred-sync/Alfred.alfredpreferences/themes/theme.urlimport.58AE0F9E-F08B-4FA7-8A05-E0D2DA2D7CEA/: theme.json
alfred-sync/Alfred.alfredpreferences/themes/theme.urlimport.8AA40AFD-B569-4982-9106-344AFF54ED07/: theme.json
alfred-sync/Alfred.alfredpreferences/workflows/user.workflow.52983130-2F91-4B28-9983-51DFB7CA3DAD/: info.plist
alfred-sync/Alfred.alfredpreferences/workflows/user.workflow.63017EC0-96E0-4B1B-BEB4-80A3B71CB2E8/: info.plist
btop/.config/btop/: btop.conf
ghostty/.config/ghostty/: config
install/: brew.sh  install.sh  tmux.sh  zsh.sh
nvim/.config/nvim/: init.lua  lazy-lock.json  lazyvim.json
nvim/.config/nvim/lua/config/: keymaps.lua  lazy.lua  options.lua
nvim/.config/nvim/lua/plugins/: alpha.lua  autopairs.lua  bufferline.lua  catppuccin.lua  cmp.lua  colorscheme.lua  conform.lua  gitsigns.lua  (+12 more)
tmux/: .tmux.conf
yazi/.config/yazi/: theme.toml  yazi.toml
zsh/: .zshrc
(+1 files in other folders)
